--- a/intro/hardware-check/Cargo.toml
+++ b/intro/hardware-check/Cargo.toml
@@ -9,7 +9,7 @@ resolver = "2"
 opt-level = "s"
 
 [profile.dev]
-debug = true # Symbols are nice and they don't increase the size on Flash
+debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
@@ -18,11 +18,12 @@ native = ["esp-idf-sys/native"]
 
 [dependencies]
 esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
-esp-idf-svc = { version="=0.41.4", features = ["experimental", "alloc"] }
+esp-idf-svc = { version = "=0.41.4", features = ["experimental", "alloc"] }
 esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
 log = "0.4"
 anyhow = "1"
 toml-cfg = "0.1"
+ignore = "=0.4.11"
 
 [build-dependencies]
 embuild = "0.28"
