--- a/intro/http-server/Cargo.toml
+++ b/intro/http-server/Cargo.toml
@@ -24,6 +24,7 @@ esp32c3 = "=0.4"
 embedded-svc = "=0.21"
 anyhow = "1.0"
 toml-cfg = "0.1"
+ignore = "=0.4.11"
 
 [build-dependencies]
 embuild = "0.28"
