--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,6 +17,7 @@ jobs:
     name: Build ${{ matrix.project.name }}
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         project:
           - name: "button-interrupt"
@@ -32,7 +33,7 @@ jobs:
           - name: "http-server"
             path: "intro/http-server"
           - name: "mqtt"
-            path: "intro/mqtt"
+            path: "intro/mqtt/exercise"
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
