--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,13 @@ on:
     paths-ignore:
       - "book/"
       - "book/**"
+      - "**/README.md"
   pull_request:
     branches: [main]
     paths-ignore:
       - "book/"
       - "book/**"
+      - "**/README.md"
   schedule:
     - cron: "50 7 * * *"
 
