--- a/common/lib/rgb-led/Cargo.toml
+++ b/common/lib/rgb-led/Cargo.toml
@@ -5,17 +5,13 @@ edition = "2021"
 authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
 
 [dependencies]
-anyhow = "=1.0.71"
-esp-idf-hal = "=0.41.1"
-esp-idf-sys = "=0.33.0"
-log = "=0.4.18"
-rgb = "=0.8.36"
+anyhow = "=1.0.75"
+esp-idf-svc = { version = "0.47.3", features = ["experimental", "alloc", "native", "binstart"] }
+log = "=0.4.20"
+rgb = "0.8.29"
 
 [build-dependencies]
-anyhow = "=1.0.71"
-embuild = "=0.31.2"
+embuild = "=0.31.4"
 
 [dev-dependencies]
-anyhow = "=1.0.71"
-esp-idf-svc = { version = "=0.46.0", features = ["experimental", "alloc"] }
-esp-idf-sys = { version = "=0.33.0", features = ["native", "binstart"] }
+esp-idf-svc = { version = "0.47.3", features = ["experimental", "alloc", "native", "binstart"] }
