--- a/intro/http-client/Cargo.toml
+++ b/intro/http-client/Cargo.toml
@@ -15,20 +15,13 @@ opt-level = "s"
 debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
-[features]
-default = ["native"]
-native = ["esp-idf-sys/native"]
-
 [dependencies]
-anyhow = "=1.0.71"
-embedded-svc = "=0.25.0"
-esp-idf-hal = "=0.41.1"
-esp-idf-svc = { version = "0.46.0", features = ["experimental", "alloc"] }
-esp-idf-sys = { version = "=0.33.0", features = ["binstart"] }
+anyhow = "=1.0.75"
+embedded-svc = { version = "0.26.4", default-features = false }
+esp-idf-svc = { version = "0.47.3", features = ["nightly"] }
 toml-cfg = "=0.1.3"
 wifi = { path = "../../common/lib/wifi" }
 
 [build-dependencies]
-anyhow = "=1.0.71"
-embuild = "=0.31.2"
+embuild = "=0.31.4"
 toml-cfg = "=0.1.3"
