--- a/intro/http-client/Cargo.toml
+++ b/intro/http-client/Cargo.toml
@@ -17,8 +17,8 @@ opt-level = "z"
 
 [dependencies]
 anyhow = "=1.0.75"
-embedded-svc = { version = "0.26.4", default-features = false }
-esp-idf-svc = { version = "0.47.3", features = ["nightly"] }
+embedded-svc = "=0.26.4"
+esp-idf-svc = { version = "=0.47.3", features = ["nightly"] }
 toml-cfg = "=0.1.3"
 wifi = { path = "../../common/lib/wifi" }
 
