--- a/advanced/i2c-sensor-reading/.cargo/config.toml
+++ b/advanced/i2c-sensor-reading/.cargo/config.toml
@@ -9,12 +9,12 @@ runner = "espflash flash --monitor"
 rustflags = ["-C", "default-linker-libraries"]
 
 [unstable]
-build-std = ["std", "panic_abort"]
+build-std          = ["panic_abort", "std"]
 build-std-features = ["panic_immediate_abort"]
 
 [env]
-# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v4.4.4)
-ESP_IDF_VERSION = { value = "tag:v4.4.4" }
+# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v4.4.6)
+ESP_IDF_VERSION = { value = "tag:v4.4.6" }
 
 # These configurations will pick up your custom "sdkconfig.release", "sdkconfig.debug" or "sdkconfig.defaults[.*]" files
 # that you might put in the root of the project
