--- a/common/lib/wifi/Cargo.toml
+++ b/common/lib/wifi/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
 
 [dependencies]
 anyhow = "=1.0.75"
-esp-idf-svc = { version = "=0.47.3", features = ["nightly"] }
+esp-idf-svc =  "=0.47.3"
 log = "=0.4.20"
 
 [build-dependencies]
