--- a/intro/hardware-check/Cargo.toml
+++ b/intro/hardware-check/Cargo.toml
@@ -17,7 +17,7 @@ opt-level = "z"
 
 [dependencies]
 anyhow = "=1.0.75"
-esp-idf-svc = { version = "=0.47.3", features = ["nightly"] }
+esp-idf-svc =  "=0.47.3"
 log = "=0.4.20"
 rgb-led = { path = "../../common/lib/rgb-led" }
 toml-cfg = "=0.1.3"
