--- a/intro/http-client/Cargo.toml
+++ b/intro/http-client/Cargo.toml
@@ -18,7 +18,7 @@ opt-level = "z"
 [dependencies]
 anyhow = "=1.0.75"
 embedded-svc = "=0.26.4"
-esp-idf-svc = { version = "=0.47.3", features = ["nightly"] }
+esp-idf-svc =  "=0.47.3"
 toml-cfg = "=0.1.3"
 wifi = { path = "../../common/lib/wifi" }
 
